test/compile-errors/type-param-cant-have-type-args.crow
f<a> void(_ a nat)
	void
